[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Bruno Campos <me@bcfurtado.com>"]
readme = "README.md"
packages = [{include = "user_service"}]

[tool.poetry.dependencies]
python = "^3.11"
googleapis-common-protos = "^1.59.1"
grpcio = "^1.56.0"
grpcio-reflection = "^1.56.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
